[Qualità, Versione Java] - Risolti warning mostrati da java 21 - Aggiornata versione minima di java da 17 a 21