@@ -96,7 +96,7 @@ public class Client {
 		System.out.println("Format @DATE@["+dateFormatter+"]  @TIME@["+timeFormatter+"]  @ID-DATE@["+dateIdFormatter+"]  @ID-TIME@["+timeIdFormatter+"]");
 
 		// Create the connection where we're going to send the file.
-		URL url = new URL(SOAPUrl);
+		URL url = new URI(SOAPUrl).toURL();
 		URLConnection connection = url.openConnection();
 		HttpURLConnection httpConn = (HttpURLConnection) connection;
 
