@@ -31,6 +31,7 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -172,7 +173,7 @@ public final class MTOMServiceExample_MTOMServiceExampleSOAP11InterfaceEndpoint_
                 if (wsdlFile.exists()) {
                     wsdlURL = wsdlFile.toURI().toURL();
                 } else {
-                    wsdlURL = new URL(args[0]);
+                    wsdlURL = new URI(args[0]).toURL();
                 }
             } catch (MalformedURLException e) {
                 e.printStackTrace();
